# vscode-rrebnf

./: .gitignore  .vscodeignore  CHANGELOG.md  CMakeLists.txt  README.md  package-lock.json  package.json  vsc-extension-quickstart.md
cmake/: FindRR.cmake  UseRR.cmake
src/: extension.ts
syntaxes/: ebnf.tmLanguage.json
tests/: CMakeLists.txt  rr.include.ebnf  rr.syntax.ebnf
tests/cxx-std/: CMakeLists.txt
tests/cxx-std/expr/: id.expression.ebnf  primary.expression.ebnf  unqualified.id.ebnf
